恢复月卡和Tempest

--- a/docs/pages/g1.md
+++ b/docs/pages/g1.md
@@ -1433,18 +1433,25 @@ Mos.Top：赞助1000元（自定义称号，匿名）
 在你不在意累计氪金和额度的时候，代氪是你最好的选择！
 
 ### 月卡
+
+ [点击以查看月卡详情](pages/月卡.md) 
+
 月卡分为四档
-Visionaries C1 (幻想家)
-Noctambulist C2 (梦行者)
-Metaphysician C3 (形而上学家)
-Spiritualist C4 (灵修者)
-从性价比上最为推荐季卡（活动时通常有折扣），月卡档位方面推荐C2(传送特权)及以上。
 
+|名称|代号|中文名|
+|---|---|---|
+|Visionaries |C1 |幻想家
+|Noctambulist |C2 |梦行者
+|Metaphysician |C3 |形而上学家
+|Spiritualist |C4 |灵修者
+
+从性价比上最为推荐季卡*（活动时通常有折扣）*，月卡档位方面推荐 `C2(传送特权)` 及以上。
 你可联系管理员Atenls进行月卡/季卡购置。
-*拥有低级月卡再开通高级月卡会将低级月卡可用时间折算为高级月卡。
-*当你拥有某一等级月卡18个月有效期可将其转为永久。
 
-注意：当日已做完每日任务后购买月卡可能导致少做一天每日亏损KC
+> 拥有低级月卡再开通高级月卡会将低级月卡可用时间折算为高级月卡。<br>
+> 当你拥有某一等级月卡18个月有效期可将其转为永久。
+
+!> 注意：当日已做完每日任务后购买月卡可能导致少做一天每日亏损KC
 
 ### KC的使用
 KC在本服务器属于价值最高的货币之一，可以购买到绝大多数物品材料装备，故需慎重使用以防浪费。
