--- a/docs/pages/g1.md
+++ b/docs/pages/g1.md
@@ -135,6 +135,7 @@
     最基础的货币，通常用于强化装备。<br>
     特别的：Pe 的计量单位为 unit，但 Pe unit 并非固定值，而是随着玩家等级的变动而变动 <br>
     你可以通过 <span class='quote-hl'>/status me</span> 查看自身的 Pe 对应标准单位数额。<br>
+    也可以在 <span class='quote-hl'>未知产物分解台</span> 查看到目前 1 unit Pe 的准确数额。<br><br>
     获取方式：通过分解物品获取。<br>
     </div>
 
@@ -418,169 +419,216 @@ Elite以上的怪物受击有概率使自身加速或使玩家减速（有几率
 ### 地图区域简介
 
 #### 1C [傲林镇]
-> 起始的城镇，旅途的起点。
+
+> 起始的城镇，旅途的起点。<br>
 > 起源塔装备等级上限：[Lv.5]
 
 
-[奇异森林]
-产出怪物：[伐木工]  *[陨躯斧魂 Elite] *[根结亡魂Essence]
+##### [奇异森林]
+
+产出怪物：[伐木工]  [陨躯斧魂 Elite] [根结亡魂Essence]<br>
 掉落物品：[木棍]  [云杉木]  [伐木斧]
-*5b [生机议事厅]
-进入需求：
-Lv.5，36dPe（每次）
-产出怪物：*[绿影 Boss]
+
+##### **5b** [生机议事厅]
+
+进入需求：<br>
+Lv.5，36dPe（每次）<br>
+产出怪物：*[绿影 Boss]<br>
 掉落物品：[Extra卷轴（绿影）]
 
 
-[遗失村落]
-产出怪物：[村落遗民]
+##### [遗失村落]
+
+产出怪物：[村落遗民]<br>
 掉落物品：[遗落的章节(1)]
 
+---
+
 #### 2C [丘山城]
->重生点设点需求：Lv：5
+
+> 重生点设点需求：Lv：5<br>
 起源塔装备等级上限：[Lv.15]
 
 
-[潮湿洞穴]
-产出怪物：[洞穴僵尸]  *[幽湿残躯 Elite]
+##### [潮湿洞穴]
+
+产出怪物：[洞穴僵尸]  *[幽湿残躯 Elite]<br>
 掉落物品：[潮湿的石头]  [铁粒]
-[夕雾平原]
-产出怪物：[斧兵残躯]  *[不甘斧魂 Elite]
-掉落物品：[残缺的铁片]  [夕雾花] [遗落的章节(1)] [遗落的章节(2)]
+
+##### [夕雾平原]
+
+产出怪物：[斧兵残躯]  *[不甘斧魂 Elite]<br>
+掉落物品：[残缺的铁片]  [夕雾花] [遗落的章节(1)] [遗落的章节(2)]<br>
  [遗落的章节(1)] [遗落的章节(2)]各保留一组即可
-*10b [暗影殿堂]
-进入需求：
-Lv.10，36dPe（每次）
-产出怪物：*[鬼骑士 Boss]
+
+##### **10b** [暗影殿堂]
+
+进入需求：<br>
+Lv.10，36dPe（每次）<br>
+产出怪物：*[鬼骑士 Boss]<br>
 掉落物品：[Extra卷轴（鬼骑士）]
-[丘山荒野]
-产出怪物：[荒野僵尸]  *[荡魂游尸 Elite]
+
+##### [丘山荒野]
+
+产出怪物：[荒野僵尸]  *[荡魂游尸 Elite]<br>
 掉落物品：[遗落的章节(2)]
-[丘山矿坑]
-产出怪物：[行尸矿工]  *[失魂者 Elite]
-掉落物品：[煤炭 原矿] [铁原矿] [遗落的章节(3)]
+
+##### [丘山矿坑]
+
+产出怪物：[行尸矿工]  *[失魂者 Elite]<br>
+掉落物品：[煤炭 原矿] [铁原矿] [遗落的章节(3)]<br>
  [遗落的章节(3)]建议保留四组
-[古战场废墟-前]
-产出怪物：[游魂] 
+
+##### [古战场废墟-前]
+
+产出怪物：[游魂] <br>
 掉落物品：[魂魄具现物]
-古战场[深渊-古战场废墟]
-进入需求：
-400dPe（每次）
-产出怪物：*[亡魂 Elite] *[战争魂魄 Essence]
+
+##### 古战场 [深渊古战场废墟]
+
+进入需求：<br>
+400dPe（每次）<br>
+产出怪物：*[亡魂 Elite] *[战争魂魄 Essence]<br>
 掉落物品：[魂魄具现物] [魂魄具现物Ⅰ] [魂魄具现物Ⅱ]
-3C[拂光镇]
-重生点设点需求：
-Lv：20
+
+---
+
+#### 3C[拂光镇]
+
+> 重生点设点需求：Lv：20<br>
 起源塔装备等级上限：[Lv.30]
-*20b [光明修道院]
-进入需求：
-Lv.20，36dPe（每次）
-产出怪物：*[神庭圣女 Boss]
+
+##### **20b** [光明修道院]
+
+进入需求：<br>
+Lv.20，36dPe（每次）<br>
+产出怪物：*[神庭圣女 Boss]<br>
 掉落物品：[Extra卷轴（圣女）]
-[夕照湖畔]
-产出怪物：[荒野狼]  *[风语者 Elite]
+
+
+##### [夕照湖畔]
+
+产出怪物：[荒野狼]  *[风语者 Elite]<br>
 掉落物品：[狼毛] [元素 风之泪]
-d24 [遗落之地]
-进入需求：
-Lv.24[被遗忘者Elite] 
+
+##### d24 [遗落之地]
+
 每日副本介绍在下文展出
-[Greid麦田]
-产出怪物：[稻草人]  *[笑声鬼脸 Elite]
-掉落物品：[小麦]
-[格里弗斯外城]
-产出怪物：[弓卫兵] [盾卫兵]  *[米卫兵 Elite] *[舟卫兵 Elite]
-掉落物品：[格里弗斯勋章] [格里弗斯凭证]
-4C [格里弗斯城]
-重生点设点需求：
-Lv：32
+
+---
+
+##### 4C [格里弗斯城]
+
+> 重生点设点需求：Lv：32<br>
 起源塔装备等级上限：[Lv.60]
-下水道[迷路深层]
-进入需求：
-单位：dPe(杀敌数)
-2400 (0+)
-1800 (6000+)
-1200 (12000+)
-600 (24000+)
-产出怪物：*[迷幻蠹虫 Elite] *[Vicious蠹虫 Essence]
+
+##### [Greid麦田]
+
+产出怪物：[稻草人]  *[笑声鬼脸 Elite]<br>
+掉落物品：[小麦]
+
+##### [格里弗斯外城]
+
+产出怪物：[弓卫兵] [盾卫兵]  *[米卫兵 Elite] *[舟卫兵 Elite]<br>
+掉落物品：[格里弗斯勋章] [格里弗斯凭证]
+
+##### 下水道[迷路深层]
+
+进入需求：<br>
+单位：dPe(杀敌数)<br>
+2400 (0+)<br>
+1800 (6000+)<br>
+1200 (12000+)<br>
+600 (24000+)<br>
+产出怪物：*[迷幻蠹虫 Elite] *[Vicious蠹虫 Essence]<br>
 掉落物品：[猩红果实] [猩红果实*]（只有Vicious蠹虫 Essence 有极小概率产出）
-d48 [时光回廊]
-进入需求：
-Lv.48[时间巡游者Elite]
+
+##### d48 [时光回廊]
 每日副本介绍在下文展出
-[建木峡谷]
-产出怪物：[木卫]
+
+##### [建木峡谷]
+
+产出怪物：[木卫]<br>
 掉落物品：[建木木棍]
-40b [神罚参天境]
-进入需求：
-单位：dPe(杀敌数)
-3000 (0+)
-1600 (24000+)
-800 (48000+)
-200 (96000+)
-产出怪物：*[瓦利恩特 Boss]
-掉落物品：[Extra卷轴（瓦利恩特）]
 
-由于不可抗力因素，部分NPC于T1境内已被清退，物品 [魂魄具现物Ⅰ] [魂魄具现物Ⅱ][元素 风之泪] 暂无兑换途径，玩家可自行分解。
+##### **40b** [神罚参天境]
 
+进入需求：<br>
+单位：dPe(杀敌数)<br>
+3000 (0+)<br>
+1600 (24000+)<br>
+800 (48000+)<br>
+200 (96000+)<br>
+产出怪物：*[瓦利恩特 Boss]<br>
+掉落物品：[Extra卷轴（瓦利恩特）]<br>
+
+---
 
 #### 每日副本
+
 ##### 遗落之地 (d24)
-当等级达到Lv.24后，你将获得进入「遗落之地」的资格。
-在「遗落之地」中击杀其中的怪物 [被遗忘者] 后将会概率掉落物品 [被遗忘的箱子] 。
-开启后可获得奖励，为物资补给的重要来源。
-一次性可开启的数量：1x，8x，64x，640x。
-奖励内容：[Pe]、[dPe]、[源石]、[装备强化卷]、[双倍挑战卷]、[被遗忘的段落]、[延时卡]、[被遗忘的笔记]（符文）、[史诗补给箱碎片]、[传奇补给箱碎片]。
-副本内死亡并不会直接退出副本，而是需要完成副本后才能退出。
-*掉线后无法重新进入。
-收集齐 [被遗忘的段落] * 64 即可兑换 [被遗忘的魔导书] （符文）。 [被遗忘的箱子] 的一次性开启数量为 640x 时，将会概率获得 [被遗忘的魔导书] 或 [三倍挑战卷]。
+
+当等级达到Lv.24后，你将获得进入「遗落之地」的资格。<br>
+在「遗落之地」中击杀其中的怪物 [被遗忘者] 后将会概率掉落物品 [被遗忘的箱子] 。<br>
+开启后可获得奖励，为物资补给的重要来源。<br>
+一次性可开启的数量：1x，8x，64x，640x。<br><br>
+
+奖励内容：[Pe]、[dPe]、[源石]、[装备强化卷]、[双倍挑战卷]、[被遗忘的段落]、[延时卡]、[被遗忘的笔记]（符文）、[史诗补给箱碎片]、[传奇补给箱碎片]。<br>
+副本内死亡并不会直接退出副本，而是需要完成副本后才能退出。<br>
+*掉线后无法重新进入。<br>
+收集齐 [被遗忘的段落] * 64 即可兑换 [被遗忘的魔导书] （符文）。 [被遗忘的箱子] 的一次性开启数量为 640x 时，将会概率获得 [被遗忘的魔导书] 或 [三倍挑战卷]。<br>
 (tips：双倍挑战券、三倍挑战券和延时卡可叠加使用，持有多种延时卡仅生效最高级的。)
 
 ##### 时光回廊 (d48)
-当等级到达Lv.48后，你将获得进入 [时光回廊] 的资格。
-时光回廊有两个入口，分别收取不同的入场费。当你有更多的源石需求时，你可以选择消耗AP的d48入口，这会使你获得额外的副本次数；
 
-在「时光回廊」中击杀其中的怪物 [时间巡游者] 后将会概率掉落物品 [时间之外的珍品] 。
-开启后可获得奖励，为物资补给的重要来源。
-一次性可开启的数量：4x，16x，64x，256x，2048x。
-奖励内容：[Pe]、[dPe]、[源石]、[装备强化卷]、[能量卷]、[延时卡]、[双倍挑战卷]、
-[史前手札（封）]、[史前文明档案页]、[史前戒指]、[史诗补给箱碎片]、[传奇补给箱碎片]。
-[史前手札（封）] 右键后可获得一本解封后的 [史前手札]（符文）。
-[时间之外的珍品] 的一次性开启数量为256x及以上时，将会概率获得[三倍挑战券][源石16u]。
-收集齐 [史前文明档案页] * 64 即可兑换 [史前语言解析大全] 。用法：背包中放置 [史前手札（封）]，手持 [史前语言解析大全] 右键，即可大几率获得 [GSP] 点数。当 [GSP] 点数达到 16 点后，再次手持 [史前语言解析大全] 右键，即可获得属性更高的 [史前手札]（符文）。
+当等级到达Lv.48后，你将获得进入 [时光回廊] 的资格。<br>
+时光回廊有两个入口，分别收取不同的入场费。当你有更多的源石需求时，你可以选择消耗AP的d48入口，这会使你获得额外的副本次数；<br><br>
 
-关于d48的常用指令：
-1./dptest d48-osmode 切换至源石模式。舍弃其他所有产出，仅产出高额源石。
-2./dptest d48-select-<num&get; 固定设置开启数量。可供选择的数量为 4 / 16 / 64 / 256。（锁上限不锁下限，例锁256时，包内不足256仍可以开启）
-3./dptest d48-fil 切换至丢弃杂物模式。开启后将自动丢弃强化券及延时卡。
+在「时光回廊」中击杀其中的怪物 [时间巡游者] 后将会概率掉落物品 [时间之外的珍品] 。<br>
+开启后可获得奖励，为物资补给的重要来源。<br>
+一次性可开启的数量：4x，16x，64x，256x，2048x。<br>
+奖励内容：[Pe]、[dPe]、[源石]、[装备强化卷]、[能量卷]、[延时卡]、[双倍挑战卷]、<br>
+[史前手札（封）]、[史前文明档案页]、[史前戒指]、[史诗补给箱碎片]、[传奇补给箱碎片]。<br>
+[史前手札（封）] 右键后可获得一本解封后的 [史前手札]（符文）。<br>
+[时间之外的珍品] 的一次性开启数量为256x及以上时，将会概率获得[三倍挑战券][源石16u]。<br>
+收集齐 [史前文明档案页] * 64 即可兑换 [史前语言解析大全] 。<br>
+用法：背包中放置 [史前手札（封）]，手持 [史前语言解析大全] 右键，即可大几率获得 [GSP] 点数。当 [GSP] 点数达到 16 点后，再次手持 [史前语言解析大全] 右键，即可获得属性更高的 [史前手札]（符文）。<br><br>
 
-附Miyazono_Nana 的统计结果（单次记录为开启6大箱的副本奖励箱）
+关于d48的常用指令：<br>
+1. /dptest d48-osmode 切换至源石模式。舍弃其他所有产出，仅产出高额源石。
+2. /dptest d48-select-<num> 固定设置开启数量。可供选择的数量为 4 / 16 / 64 / 256。（锁上限不锁下限，例锁256时，包内不足256仍可以开启）
+3. /dptest d48-fil 切换至丢弃杂物模式。开启后将自动丢弃强化券及延时卡。
+
+附Miyazono_Nana 的统计结果（单次记录为开启6大箱的副本奖励箱）<br>
+[图]
 
 
-*源石模式产出源石数量较为稳定故未测试过多数据。
+*源石模式产出源石数量较为稳定故未测试过多数据。<br>
 
-根据统计，使用源石模式可更加高效稳定的获取源石，但会面临双倍挑战券不够用的情况。
+根据统计，使用源石模式可更加高效稳定的获取源石，但会面临双倍挑战券不够用的情况。<br>
 
-击杀/时间奖励规则（对于d24与d48）
+##### 击杀/时间奖励规则（对于d24与d48）
 
-击杀获取+时间评级奖励=本次每日副本总收益
+击杀获取+时间评级奖励=本次每日副本总收益<br>
 
-击杀获取：
+击杀获取：<br>
 当玩家处于副本内击杀怪物后均有概率获取箱子奖励，该奖励与今日人品和LP挂钩，人品越高/LP越高，击杀所获取的箱子奖励的概率就越大。（人品与LP解释均与下文介绍）
 
-
-
 时间评级奖励：
- 0.00s（marvelous）                                   15箱子额外奖励
- 0.00s- 108.00s（unparalleled）                   9箱子额外奖励
-108.00s - 192.00s（extreme）                      7箱子额外奖励
-192.00s - 384.00s（excellent）                     5箱子额外奖励
-384.00s - 640.00s（normal）                        4箱子额外奖励
-640.00s + （inferior）                                    3箱子额外奖励
+
+|消耗时间| 评级 | 额外箱子奖励数量|备注|
+|-------|---|--|----|
+|0s               | Marvelous    | 15 | 通过延时卡达成
+|0.00s - 108.00s  | Unparalleled | 9
+|108.00s - 192.00s| Extreme      | 7
+|192.00s - 384.00s| Excellenet   | 5
+|384.00s - 640.00s| Normal       | 4
+|640.00s          | Inferior     | 3
 
 
-每个副本于每日首次挑战时都将获得 200% 的时间评级奖励。
-使用延时卡将不会使时间降至负数，而是最低为0。
-合理使用延时卡可以让你的副本评级达到marvelous级别，获取最高级别的额外奖励。 
+每个副本于每日首次挑战时都将获得 200% 的时间评级奖励。<br>
+使用延时卡将不会使时间降至负数，而是最低为0。<br>
+合理使用延时卡可以让你的副本评级达到marvelous级别，获取最高级别的额外奖励。 <br><br>
 
 小建议：在无LP，RANK，活动加成的情况下，且今日人品不为绿色的情况下，使用72s延时卡达到marvelous级别可稳定获取最多的箱子奖励。
 
@@ -593,6 +641,13 @@ Lv.48[时间巡游者Elite]
 值得一提的是，当你同时使用双倍和三倍挑战卷时，你的击杀总额为N+N*（100%+200%）而并非是N*2*3。
 *赞助可提升你的rank，rank提升后击杀上限也会相应提升。
 例：Mos.Top的基础击杀上限为200。
+
+
+
+
+---
+
+
 
 ## 生活技能
 你可以使用 /status life 指令查看你的生活技能等级，生活技能目前有5种 （飞行技能暂未开放）
@@ -655,6 +710,7 @@ Lv.48[时间巡游者Elite]
 【灵性】鱼无法卖出 但可以制作特殊物品
 【灵性】神话鱼 ； 【灵性】sp鱼 ；【灵性】世界般的鱼 有着极高的价值，若有幸在前期获取，可以与其他玩家交易，为你初入DPIV带来十分可观的便利。
 
+---
 
 ### 挖矿
 当你获得稿子之后，你可以在服务器内被允许的地方进行矿物采集（例如t1矿洞）
@@ -677,6 +733,7 @@ Lv.48[时间巡游者Elite]
 
 更高级别的稿子只会影响挖掘矿物的速度，并不会影响矿物的产量，一般T1只建议制作至    平平无奇的  铁镐
 
+---
 
 ### 制作
 在T1（光晦陆）中，你可以在傲林镇（1c）内，找到制作台进行制作
@@ -694,6 +751,7 @@ Lv.48[时间巡游者Elite]
 
 
 
+---
 
 ### 烹饪
 在T1（光晦陆）中，你可以在傲林镇（1c）内，找到炼制锅进行烹饪
@@ -722,7 +780,7 @@ Lv.48[时间巡游者Elite]
 
 
 
-
+---
 
 ### 飞行（EA测试中）
        
@@ -747,7 +805,7 @@ Lv.48[时间巡游者Elite]
 
 
 
-
+---
 
 ### 采集（种植）
 
@@ -765,7 +823,7 @@ Lv.48[时间巡游者Elite]
 
 
 
-
+---
 
 ## BOSS相关
 服务器中，存在着一些强大的领主级怪物。击杀他们，即可获得他们的 [奖励卷轴] 。
@@ -804,13 +862,16 @@ theLia Fáil：（大活动专属物资）
 
 
 #### Souls
+
 - 普通唤魔可获得 80 Souls 点数。
 - 特殊唤魔可获得 400 Souls 点数。（ [瓦利恩特] 的特殊唤魔会获得 800 Souls 点数）
 - 开启 [奖励卷轴 ]需要消耗 10 Souls 点数。
 - Souls 不足开启 [奖励卷轴] 将会吞噬卷轴且无任何奖励。
 - 每个Boss的 Souls 点数是相互独立的，并不共享。
 - 在召唤boss时可以看到自己的Souls点数数量。
+
 Desire
+
 - 用于 [Extra 卷轴] 的开启。
 - 击杀Boss时在其一定范围内的玩家都将会获得 Desire 点数。
 - Desire 或 Souls 不足开启 [Extra 卷轴] 将会吞噬卷轴且无任何奖励。
@@ -821,42 +882,44 @@ Desire
 你可以使用指令/status me 查看自己所有boss的 Souls和Desire点数数量
 
 #### 人品
-输入rp或/jrrp可以查看今日人品。
-人品会对以下项目进行概率加成：
-  - 每日副本，人品造成的影响为 -25% ~ +25%
-  - Boss卷轴，人品造成的影响为 -20% ~ +20%
-  - 鉴定物品，人品造成的影响为 -25% ~ +25%
+
+输入rp或/jrrp可以查看今日人品。<br>
+
+人品会对以下项目进行概率加成:
+- 每日副本，人品造成的影响为 -25% ~ +25%
+- Boss卷轴，人品造成的影响为 -20% ~ +20%
+- 鉴定物品，人品造成的影响为 -25% ~ +25%
 
 #### LP/fs/箭
 LP/FS/箭是什么：
 
 
 
-LP是直接增加卷轴/每日/鉴定概率的点数。
-LP的高低直接影响卷轴出货概率以及每日副本怪物掉落奖励箱的概率。
+LP是直接增加卷轴/每日/鉴定概率的点数。<br>
+LP的高低直接影响卷轴出货概率以及每日副本怪物掉落奖励箱的概率。<br>
 
-*每日副本中，LP判断为快照机制，即进本时的LP效果将持续到退出副本，但已经在副本内时新的LP不会有掉落加成。
+*每日副本中，LP判断为快照机制，即进本时的LP效果将持续到退出副本，但已经在副本内时新的LP不会有掉落加成。<br>
 
 
 
-fs是另一种形式的LP，每个fs为0.25LP。
-至少拥有1颗fs可以每日主动使用发射一次幸运女神的箭矢(fs arrow)，使用CD3s。
-拥有1/4/8/16/32/64可以额外使用一次。
+fs是另一种形式的LP，每个fs为0.25LP。<br>
+至少拥有1颗fs可以每日主动使用发射一次幸运女神的箭矢(fs arrow)，使用CD3s。<br>
+拥有1/4/8/16/32/64可以额外使用一次。<br>
 输入/fs可以查看自己拥有的fs数量和相关指令。
 
 
 
 
-箭为幸运女神的箭矢(fs  arrow)简称，使用无cd。
-幸运女神的箭矢(fs  arrow)效果为：
-使用时全服LP+3，持续45s，
+箭为幸运女神的箭矢(fs  arrow)简称，使用无cd。<br>
+幸运女神的箭矢(fs  arrow)效果为：<br>
+使用时全服LP+3，持续45s，<br>
 持续时间内再次使用LP+1，持续45s。
 
 
-
+---
 
 ## 每日任务
- 每日上线后自动接受的任务，完成后可获得资源补给箱。（Lv.10+）
+ 每日上线后自动接受的任务，完成后可获得资源补给箱。（Lv.10+）<br>
 资源补给箱为高等级资源，你只能通过高难度跑酷与每日任务获得。
 
 例：
@@ -870,12 +933,14 @@ fs是另一种形式的LP，每个fs为0.25LP。
 - 每日任务完成可消除一次验证码未通过的惩罚记录。
 ★：请勿开多个小号来刷取每日任务，一经发现，将会有严重惩罚。
 
+---
+
 ## 悬赏任务
-当等级达到Lv.24后，你将被允许接受 [悬赏任务] 。（t1悬赏塔位于稻草人麦田内）
-通过交付一定的材料以获得 [AP] 、[源石] 、[经验值(百分比)]的奖励。
-取消任务会惩罚一段时间不能再次接取任务。
-时间会逐渐上涨，最高惩罚24小时，每月月初清空次数重新累加。
-推荐积攒一定量的材料再去做悬赏，[格里佛斯市民勋章][猩红果实]的悬赏任务因其性价比极低(获取困难，材料价值高)不推荐完成。
+当等级达到Lv.24后，你将被允许接受 [悬赏任务] 。（t1悬赏塔位于稻草人麦田内）<br>
+通过交付一定的材料以获得 [AP] 、[源石] 、[经验值(百分比)]的奖励。<br>
+取消任务会惩罚一段时间不能再次接取任务。<br>
+时间会逐渐上涨，最高惩罚24小时，每月月初清空次数重新累加。<br>
+推荐积攒一定量的材料再去做悬赏，[格里佛斯市民勋章][猩红果实]的悬赏任务因其性价比极低(获取困难，材料价值高)不推荐完成。<br>
 
 例
 
@@ -1445,19 +1510,19 @@ Mos.Top：赞助1000元（自定义称号，匿名）
 |Metaphysician |C3 |形而上学家
 |Spiritualist |C4 |灵修者
 
-从性价比上最为推荐季卡*（活动时通常有折扣）*，月卡档位方面推荐 `C2(传送特权)` 及以上。
+从性价比上最为推荐季卡*（活动时通常有折扣）*，月卡档位方面推荐 `C2`(有传送特权) 及以上。
 你可联系管理员Atenls进行月卡/季卡购置。
 
 > 拥有低级月卡再开通高级月卡会将低级月卡可用时间折算为高级月卡。<br>
-> 当你拥有某一等级月卡18个月有效期可将其转为永久。
+> 当你拥有某一等级月卡24/24/18/15个月有效期可将其转为永久。
 
 !> 注意：当日已做完每日任务后购买月卡可能导致少做一天每日亏损KC
 
 ### KC的使用
-KC在本服务器属于价值最高的货币之一，可以购买到绝大多数物品材料装备，故需慎重使用以防浪费。
-初期KC的使用仅推荐购买魔法类的制式符文：【梅林的祝福】和物理类的制式符文：【奔雷符文】。
-在2023/8/14更新之后取消了制式符文的rank要求，这意味着顶帖的高kc收益和代氪的高kc比例相对于直接氪金可以更好更快的提升你的战力。
-因补给箱开出的装备跟随玩家等级，所以满级之后再开启补给箱获取荣耀桂冠和权杖Release性价比最高。
+KC在本服务器属于价值最高的货币之一，可以购买到绝大多数物品材料装备，故需慎重使用以防浪费。<br>
+初期KC的使用仅推荐购买魔法类的制式符文：【梅林的祝福】和物理类的制式符文：【奔雷符文】。<br>
+在2023/8/14更新之后取消了制式符文的rank要求，这意味着顶帖的高kc收益和代氪的高kc比例相对于直接氪金可以更好更快的提升你的战力。<br>
+因补给箱开出的装备跟随玩家等级，所以满级之后再开启补给箱获取荣耀桂冠和权杖Release性价比最高。<br>
 请勿使用KC进行每日副本和T2传送。
 
 
@@ -1467,107 +1532,125 @@ KC在本服务器属于价值最高的货币之一，可以购买到绝大多数
 > 交流是解决问题的唯一途径，新玩家可以大胆放心的向高等级玩家寻求帮助，这是你获取信息最快捷的途径。
 
 * 在哪下载-下载客户端和整合包
-使用PCL下载1.12.2纯净端并装入forge和OptiFine后，在群里下载绘梦师专属材质包后进行游玩，或者在群公共置顶下载已经整理好的客户端。如果你喜欢可以自己装一些优化mod（如后台降低fps，快捷兑换等）和功能mod（如自动整理，小地图等），请注意不要使用外挂端、杀戮、飞天、穿墙、防击退、灵魂出窍等。
-推荐的mod：
-皮肤mod——CustomSkinLoader
-音乐mod——AllMusic
-光影优化——phosphor
-传输优化——biggerpacketsplz
-漏洞修复——Fix4Log4J
-后台优化——FpsReducer
-mod优化——Liteloader
-自动钓鱼——Auto-Fish
-端内换号——Account Switcher
-快捷指令——QuickEasyMenu
-隐藏盔甲——hiddenarmor
-批量交易——EasierVillagerTrading
-功能优化——masa全家桶
-小地图——不做推荐
+
+    使用PCL下载1.12.2纯净端并装入forge和OptiFine后，在群里下载绘梦师专属材质包后进行游玩，或者在群公共置顶下载已经整理好的客户端。<br>
+    如果你喜欢可以自己装一些优化mod（如后台降低fps，快捷兑换等）和功能mod（如自动整理，小地图等），<br>
+    请注意`不要使用外挂端`，如杀戮、飞天、穿墙、防击退、灵魂出窍等。<br>
+    推荐的mod：<br>
+    - 皮肤mod——CustomSkinLoader
+    - 音乐mod——AllMusic
+    - 光影优化——phosphor
+    - 传输优化——biggerpacketsplz
+    - 漏洞修复——Fix4Log4J
+    - 后台优化——FpsReducer
+    - mod优化——Liteloader
+    - 自动钓鱼——Auto-Fish
+    - 端内换号——Account Switcher
+    - 快捷指令——QuickEasyMenu
+    - 隐藏盔甲——hiddenarmor
+    - 批量交易——EasierVillagerTrading
+    - 功能优化——masa全家桶
+    - 小地图——不做推荐
 自动整理mod在没有家园之前只能拿来整理背包和末影箱，仓库不能使用。
 
 * 为什么我的武器/道具无法正常显示
-没装forge
+
+    没装forge
 
 * 怎么点歌
-在服务器内，如果你想听一些你喜欢的乐曲，你可以进行点歌，在此之前，你必须下载并安装服务器的音乐mod。（仅支持网易云音乐所包含的曲目）
 
-/music 歌曲id  或  /music 歌曲链接   
- /music search 歌曲名/歌手名
+    在服务器内，如果你想听一些你喜欢的乐曲，你可以进行点歌，在此之前，你必须下载并安装服务器的音乐mod。（仅支持网易云音乐所包含的曲目）
 
-例如/music https://music.163.com/song?id=1845920219&userid=297619403
- 
-歌曲id为
-你可以在游戏内使用/music help 以获取更多帮助
+    /music 歌曲id  或  /music 歌曲链接   
+    /music search 歌曲名/歌手名
 
-特别提醒：除了歌曲，你也可以对电台进行点播，你可以点网易云音乐内的VIP歌曲。
+    例如/music https://music.163.com/song?id=1845920219&userid=297619403
+    
+    歌曲id为
+    你可以在游戏内使用/music help 以获取更多帮助
+
+    特别提醒：除了歌曲，你也可以对电台进行点播，你可以点网易云音乐内的VIP歌曲。
 
 * 在游戏过程中法杖/刀无法正常使用
-当你使用空手或者非近战武器左键攻击怪物时，攻速判定出现问题，会出现卡刀的情况，持续15s。
-当你发现法杖无法正常使用时，法杖的切换有1s的咏唱判定，导致你无法第一时间使用法杖进行正常攻击。出现卡法杖的情况，持续15s。
-因此，玩家尽量不要使用除了近战武器外的任何物品进行左键攻击，不要来回切换法杖进行攻击，避免出现卡刀/卡法杖的情况。
-*弓可以进行近战攻击且不会卡刀。
+
+    当你使用空手或者非近战武器左键攻击怪物时，攻速判定出现问题，会出现卡刀的情况，持续15s。<br>
+    当你发现法杖无法正常使用时，法杖的切换有1s的咏唱判定，导致你无法第一时间使用法杖进行正常攻击。出现卡法杖的情况，持续15s。<br>
+    因此，玩家尽量不要使用除了近战武器外的任何物品进行左键攻击，不要来回切换法杖进行攻击，避免出现卡刀/卡法杖的情况。<br>
+    *弓可以进行近战攻击且不会卡刀。
 
 * 补给箱碎片有什么用，在哪换
-常规补给箱分为史诗，传说，神话三种，通过野外奖励箱或者开启d24箱子等多种渠道均可能获取补给箱碎片，当补给箱碎片达到一定数量即可在t1地图内找npc换取。
-npc位置：-345,94,234，需要爬山。
+
+    常规补给箱分为史诗，传说，神话三种，通过野外奖励箱或者开启d24箱子等多种渠道均可能获取补给箱碎片，当补给箱碎片达到一定数量即可在t1地图内找npc换取。<br>
+    npc位置：-345,94,234，需要爬山。
 
 
 * 前期装备武器应该怎么获取
-起源塔打造是前期获取装备的最佳途径，而武器建议向高等级玩家购买高级武器如[Lv.40 散]。
+
+    起源塔打造是前期获取装备的最佳途径，而武器建议向高等级玩家购买高级武器如[Lv.40 散]。<br>
 
 * 长流程武器都有什么，需要做吗
-绘梦师的世界是开放的世界，并不具有过多的约束，一切取决于自己。长流程武器的具体内容在群内文件有单独的一栏，具体请移步与群内实用文档，例
 
+    绘梦师的世界是开放的世界，并不具有过多的约束，一切取决于自己。长流程武器的具体内容在群内文件有单独的一栏，具体请移步与群内实用文档，例
 
-具体装备推荐可见DPIV服务器 进阶篇
+    具体装备推荐可见DPIV服务器 进阶篇
 
 * xxx物品在哪里/怎么获取/有什么用
+
   - /dpitem <ItemType> 所有常规材料基本都已可供查询。
   - 同时，你现已可以通过 /dpitem <MobType> 以查询部分怪物资料。
   - 对于部分未能查询之稀有材料，请私聊管理员并提供对应材料。将在尽可能早的时间里添加对应资料。
 
 * 天泽岛进阶任务是什么
 
-进入天泽岛才是真正开启了绘梦师的大门，而进入天泽岛需要完成进阶任务。
-您需要花费：
-1 成就勋章（AM）
-3000u(unit) pe，(参考数值：Lv.40 2.15M)
-20000 dpe，
-至少32 ap的获得记录
+    进入天泽岛才是真正开启了绘梦师的大门，而进入天泽岛需要完成进阶任务。<br>
 
-或击杀Valiant (40b boss)
-*击杀则无需前面的材料条件。
-*蹭别人击杀也可以。
+    你需要花费：
+        * 1x 成就勋章（AM）
+        * 3000 unit Pe (参考数值：Lv.40 2.15M)
+        * 20000 dPe，
+        * 至少已获得 32 AP (完成悬赏任务)
 
+    或 `击杀Valiant` (40级Boss)
+    *击杀则无需前面的材料条件。蹭别人击杀也可以。*
 
+    进入「天泽岛」的消耗费用取决于你的 [杀敌数/在线时长]，你可以在 `/status me` 查看到自己的相关信息
 
-进入「天泽岛」的消耗费用随您的 [杀敌数/在线时长]而改变 (K：击杀数、T：在线时长/h)
-  - 7500 dPe | K≥4000 及 T≥0
-  - 3600 dPe | K≥12000 或 T≥16
-  - 1800 dPe | K≥24000 或 T≥24
-  - 800 dPe | K≥36000 或 T≥40
-  - 400 dPe | K≥48000 及 T≥80
+    |击杀数|在线时长(hrs)|dPe消耗|
+    |---|---|---|
+    |4000|0|7500|
+    |12000|16|3600|
+    |24000|24|1800|
+    |36000|40|800|
+    |48000|80|400|
 
-当你的在线时长/击杀数量 达不到可进入标准或所需dpe过多，你可以选择于t1的4c寻找rEd_dIce用12AM换取武器「格里佛斯的守护」（剑）与「格里佛斯的信念」（法杖）其中之一的图纸以制作武器（建议先做信念）。
-此两把武器同时是长流程「运命･灵魂摆渡者」（法杖）的前置需求。
+    当你的在线时长/击杀数量 达不到可进入标准或所需dpe过多，你可以选择于t1的4c寻找rEd_dIce用12AM换取武器「格里佛斯的守护」（剑）与「格里佛斯的信念」（法杖）其中之一的图纸以制作武器（建议先做信念）。
+    此两把武器同时是长流程「运命･灵魂摆渡者」（法杖）的前置需求。
 
 * 地皮/房子/家园在哪
-奇迹和魔法不是免费的，在游戏中后期，你可以通过积攒【源石16u】购置房屋。
-详细介绍请移步【DPIV服务器进阶篇】
+
+    奇迹和魔法不是免费的，在游戏中后期，你可以通过积攒【源石16u】购置房屋。
+    详细介绍请移步【DPIV服务器进阶篇】
 
 
 * 我开了月卡该干什么
-体力储罐，每日任务nlp，悬赏（c3c4），在线吃祝福，购买补给箱
-设置自动出售未鉴定，自动出售鱼
+
+    体力储罐，每日任务nlp，悬赏（c3c4），在线吃祝福，购买补给箱
+    设置自动出售未鉴定，自动出售鱼
+
 * 上线之后我不知道该干什么
-试着完成这个吧→DPIV成就表
+
+    试着完成这个吧→DPIV成就表
+
 * 升不动级了怎么办
-每日副本&每周副本
-材料悬赏&击杀悬赏
-蹭经验
-祝福
+
+    每日副本&每周副本
+    材料悬赏&击杀悬赏
+    蹭经验
+    祝福
+
 * 打不过怪怎么办
-各种提升方式
+
+    各种提升方式    
 
 
 ---
@@ -1580,7 +1663,6 @@ npc位置：-345,94,234，需要爬山。
 5. 警惕奸商
 6. 更新骗局
 7. 因部分武器/装备/材料更新，旧版本的武器/装备/材料失去价值，警惕老东西在线诈骗 左为新版本yume图纸，右为旧版本
-8. 你可以在未知产物分解台看到你当前等级下 pe对应unit的具体数值
 
 
 
