--- a/docs/pages/月卡.md
+++ b/docs/pages/月卡.md
@@ -3,10 +3,11 @@
 ---
 
 ## 特殊的赞助类型：月卡
-通过订阅月卡，你可以获得持续 1 Mon(31d) 的对应特权。
-对于时间充裕的玩家，月卡是所有增殖项目中性价比至高的一类，且远超其余项目。
-仅需每月付出一点资金即可获得超多绝赞特权，
-包括但不限于：
+通过订阅月卡，你可以获得持续 1 Mon(31d) 的对应特权。<br>
+你也可以一次性进行季度订阅以获得更优的优惠价格<br>
+对于时间充裕的玩家，月卡是所有增殖项目中性价比至高的一类，且远超其余项目。<br>
+仅需每月付出一点资金即可获得超多绝赞特权，<br>
+包括但不限于：<br>
 
 * **NoctambulistLP** - 通过完成的每日任务增加你的卷轴出货几率和每日副本箱子掉落几率。
 * **多类加成** - 每日任务更多的物资奖励箱、在线奖励Bonus、悬赏任务获得更多的AP以及每日副本箱子最终加成。C2及以上还能获得每日任务额外奖励Kc。
@@ -15,14 +16,16 @@
 更多请查看下方详表。
 
 ----
-* Visionaries `C1` (幻想家)
-* Noctambulist `C2` (梦行者)
-* Metaphysician `C3` (形而上学家)
+月卡分为四档
 
-* Spiritualist `C4` (灵修者)
-> 仅面向已拥有 「代理指挥卡 [Perpetual]」的玩家出售的至高月度订阅制服务。
+|名称|代号|中文名|备注
+|---|---|---|---|
+|Visionaries |C1 |幻想家
+|Noctambulist |C2 |梦行者
+|Metaphysician |C3 |形而上学家
+|Spiritualist |C4 |灵修者|仅面向已拥有 `「代理指挥卡 [Perpetual]」`的玩家
 
 ---
 
 
-![月卡详情](https://s2.loli.net/2022/04/17/gUzB6QrxNv7aSWL.png)
+![月卡详情](https://s2.loli.net/2025/06/28/EViWt3J1D4p8cTH.png)
