--- a/docs/pages/g1.md
+++ b/docs/pages/g1.md
@@ -787,13 +787,13 @@ Lv.20，36dPe（每次）<br>
 右键即可将鱼获卖出获取Pe；钓鱼有概率会获得额外的Exp<br>
 钓鱼会增加你的钓鱼等级，钓鱼等级的高低影响额外Exp获取的概率，鱼竿的品质和钓鱼等级均不影响鱼的品质。<br>
 ![鱼品质](https://img.picui.cn/free/2025/06/27/685e2596b2886.jpg)<br>
-（钓鱼获取的Exp的多少于等级有关，与钓上鱼的品质无关，但只有史诗及以上的鱼才会有概率获取Exp）<br>
-（另：当等级处于Lv.144 ----- Lv.190时获取的Exp为当前升级所需Exp的0.4%左右；Lv.191 ---- Lv.200获取的Exp为当前升级所需的0.125%左右，等级越高获取的Exp比例就越低，更低等级段及其获取的Exp比例暂时未能得到数据。）<br>
+*(钓鱼获取的Exp的多少与等级有关，与钓上鱼的品质无关，但只有史诗及以上的鱼才会有概率获取Exp)*<br>
 
-世界般的鱼只存在于钓鱼随机事件（详细见服务器事件）当中。其中本我潮汐、普通潮汐、Extreme潮汐、亚特兰蒂斯映照（映照潮汐）的几率比为 1:1:2:3。<br>
+世界般的鱼只存在于钓鱼随机事件（详细见服务器事件）当中。
 钓鱼等级对世界般的鱼捕获几率影响： Lv.25 → Lv.200：0% → 90%。同时第一条必定成功。<br>
 
 钓鱼生活经验获取一览：
+
 | 品质 | 钓鱼经验 |
 | --- | --- |
 | 发臭的、劣质的、普通的 | 20 |
@@ -1146,7 +1146,7 @@ UT可以代替材料进而完成悬赏任务，难度等级对应UT消耗<br>
 你可以使用UT与材料一同交付悬赏任务，但当背包存在UT时，优先消耗UT。<br>
 材料消耗优先级：`UT` > [QS](pages/storage?id=quantum-storage) > 背包
 
-### 【击杀类】悬赏任务（测试中）
+### 击杀类悬赏任务（测试中）
 
 详细内容移步g2篇——「空间站」
 
