update Mt edge2

--- a/docs/pages/边界边界山.md
+++ b/docs/pages/边界边界山.md
@@ -31,8 +31,8 @@
 |怪物|基准伤害|暗属性强化|无视护甲|特性|
 |:--:|:--:|:--:|:--:|---|
 |**咒术师** `边界山`<br>`Lv.240` ~ `Lv.253`|483704/523704/563704|13875/14375/15000|否|
-|**暗能咒术师**<br>`Lv.265`/`Lv.275`/`Lv.285`|1395360/1559360/1735790|28750/30675/32325|是|受环境增益<sup>[[1]](pages/边界边界山?id=环境影响)</sup>
-|**暗能咒术师**<br> `Elite` <br>`Lv.265`/`Lv.275`/`Lv.285`|1395360/1559360/1735790|43125/46125/48500|是|受环境增益<sup>[[1]](pages/边界边界山?id=环境影响)</sup><br>暗属性强化提供的额外伤害<br>将造成两倍效果
+|**暗能咒术师**<br>`Lv.265`/`Lv.275`/`Lv.285`|1395360/1559360/1735790|28750/30675/32325|是|受环境增益<sup>[[1]](pages/边界边界山?id=暗咒-1)</sup>
+|**暗能咒术师**<br> `Elite` <br>`Lv.265`/`Lv.275`/`Lv.285`|1395360/1559360/1735790|43125/46125/48500|是|受环境增益<sup>[[1]](pages/边界边界山?id=暗咒-1)</sup><br>暗属性强化提供的额外伤害<br>将造成两倍效果
 
 
 ---
@@ -40,10 +40,15 @@
 ## 环境影响
 
 外海的光照是可受环境定义的，边界边界山属暗元素区域，在此区域，暗属性将受到增益。<br>
-部分伤害将视乎你所处位置的环境亮度而有所变化。<br>
+部分伤害将视乎 **你所处位置的方块亮度** 而有所变化。<br>
 
 ### 对玩家伤害
 
 #### 暗咒
 
-$ 123 $
+暗咒将在黑暗环境中造成更高的伤害：
+
+当你的环境亮度低于 **7** 时，每 **1** 点亮度，都将对伤害额外增益 **100%**
+
+$Damage = Damage * Max(7 - BlockLight , 0)$
+
