update Mt edge2

--- a/docs/pages/边界边界山.md
+++ b/docs/pages/边界边界山.md
@@ -46,9 +46,15 @@
 
 #### 暗咒
 
-暗咒将在黑暗环境中造成更高的伤害：
+暗咒将在黑暗环境中造成更高的伤害：<br>
+当你的环境亮度低于 **7** 时，每降低 **1** 点亮度，都将对伤害额外增益 **100%** ，即 $Damage = Damage * (1+Max(7 - BlockLight , 0))$ <br>
+因此在任何情况下，都请尽可能保持行走在道路 (道路通常有 6 ~ 8 亮度) 上。
 
-当你的环境亮度低于 **7** 时，每 **1** 点亮度，都将对伤害额外增益 **100%**
+参考:
 
-$Damage = Damage * Max(7 - BlockLight , 0)$
+```
+假定你的暗属性抗性为 0，同时，行走在亮度为 0 的区域，
+你受到一次来自 暗能咒术师 (Elite) 的暗咒攻击，将受到 1735790 * (1+48.5) * (1+7) = 687.37M 伤害
+```
 
+?> 关于伤害计算，更多内容请参考 [属性与相关计算公式](pages/attr)
