--- a/docs/pages/边界边界山.md
+++ b/docs/pages/边界边界山.md
@@ -5,11 +5,21 @@
 
 ---
 
+## Intro
+
+你可以在泠风峡谷底部的聚集地中购买流转空间钟，并于 **边界门** 处使用以前往此地。<br>
+或通过 `界域引继者` 对着 **边界门** 使用，亦可前往此地，但 `界域引继者` 将进入一次 120 mins 的长冷却。
+
 ## Description
 
 本区域由双峡谷构成，经一个山洞连通。<br>
 当你进入时，你将在 `(x:766,y:107,z:-1359)` 处，你也可以从这里返回边界山。<br>
-当你死亡时，你将于此处复活。
+当你死亡时，你将于此处复活。但你离线后，将不会再回到此地<br>
+
+本区域存在通关概念，在你击杀了一定量的暗能咒术师后，你可以于双峡谷的末端 **消耗体力** 离开，并领取通关奖励。<br>
+奖励将受你已击杀的暗能咒术师、暗影标记状态影响。
+
+
 
 ---
 
@@ -21,19 +31,33 @@
 
 不同于边界山中的咒术师唯有 Elite 才会使用法术攻击，此处所有普通咒术师都将具备法术攻击的能力。<br>
 同时强度相较原模板有较大提升：
-- 普通怪物介乎 Elite 与 Essence 之间
-- Elite 怪物约等于 Essence +
-
-#### 暗咒
+- 普通怪物介乎 Elite 与 Essence 之间; 掉落表遵循 Elite
+- Elite 怪物约等于 Essence +; 掉落表遵循 Essence
 
 > 本栏内容含边界山怪物之技能详情，敬请留意。
 
-|怪物|基准伤害|暗属性强化|无视护甲|特性|
-|:--:|:--:|:--:|:--:|---|
-|**咒术师** `边界山`<br>`Lv.240` ~ `Lv.253`|483704/523704/563704|13875/14375/15000|否|
-|**暗能咒术师**<br>`Lv.265`/`Lv.275`/`Lv.285`|1395360/1559360/1735790|28750/30675/32325|是|受环境增益<sup>[[1]](pages/边界边界山?id=暗咒-1)</sup>
-|**暗能咒术师**<br> `Elite` <br>`Lv.265`/`Lv.275`/`Lv.285`|1395360/1559360/1735790|43125/46125/48500|是|受环境增益<sup>[[1]](pages/边界边界山?id=暗咒-1)</sup><br>暗属性强化提供的额外伤害<br>将造成两倍效果
+#### 暗咒
 
+> 暗咒是咒术师的基础法术攻击<br>
+> 当被攻击时，所有暗能咒术师都会尝试进行一次 **暗咒** 反击 `15格` 内最近的 `1` 位目标<br><br>
+> 暗能咒术师 `Elite` 则必定会进行一次反击。<br>
+> 同时，每 `40 ticks` 都将有 `50%` 的几率尝试进行一次 **暗咒** 攻击 `20格` 内最近的 `2` 位目标。
+
+
+|怪物|反击几率|基准伤害|暗属性强化|无视护甲|特性|
+|:--:|:--:|:--:|:--:|:--:|---|
+|**咒术师** `边界山`<br>`Lv.240` ~ `Lv.253`|20%|483704/523704/563704|13875/14375/15000|否|
+|**暗能咒术师**<br>`Lv.265`/`Lv.275`/`Lv.285`|20%|697680/779680/867895|17250/18125/19125|是|受环境增益<sup>[[1]](pages/边界边界山?id=暗咒-1)</sup>
+|**暗能咒术师**<br> `Elite` <br>`Lv.265`/`Lv.275`/`Lv.285`|100%|697680/779680/867895|24125/25500/26875|是|受环境增益<sup>[[1]](pages/边界边界山?id=暗咒-1)</sup><br>暗属性强化提供的额外伤害<br>将造成两倍效果
+
+#### 暗能锁链
+
+> 当暗能咒术师死亡后，它将有概率对击杀者尝试释放一次亡语攻击
+
+|怪物|触发几率|基准伤害|暗属性强化|特性|
+|:--:|:--:|:--:|:--:|---|
+|**暗能咒术师**<br>`Lv.265`/`Lv.275`/`Lv.285`|25%|697680/779680/867895|17250/18125/19125|受距离影响<sup>[[2]](pages/边界边界山?id=暗能锁链-1)</sup>
+|**暗能咒术师**<br> `Elite` <br>`Lv.265`/`Lv.275`/`Lv.285`|100%|697680/779680/867895|24125/25500/26875|受距离影响<sup>[[2]](pages/边界边界山?id=暗能锁链-1)</sup><br>暗属性强化提供的额外伤害<br>将造成三倍效果
 
 ---
 
@@ -47,14 +71,47 @@
 #### 暗咒
 
 暗咒将在黑暗环境中造成更高的伤害：<br>
-当你的环境亮度低于 **7** 时，每降低 **1** 点亮度，都将对伤害额外增益 **100%** ，即 $Damage = Damage * (1+Max(7 - BlockLight , 0))$ <br>
+当你的环境亮度低于 **7** 时，每降低 **1** 点亮度，都将对伤害额外增益 **75%** ，即 $Damage = Damage * (1+ \frac{3}{4} * [Max(7 - BlockLight , 0)])$ <br>
 因此在任何情况下，都请尽可能保持行走在道路 (道路通常有 6 ~ 8 亮度) 上。
 
 参考:
 
-```
+```TEXT
+Case 1:
 假定你的暗属性抗性为 0，同时，行走在亮度为 0 的区域，
-你受到一次来自 暗能咒术师 (Elite) 的暗咒攻击，将受到 1735790 * (1+48.5) * (1+7) = 687.37M 伤害
+你受到一次来自 暗能咒术师 (Elite) 的暗咒攻击，将受到 867895 * (1+Max(0,(26875-0)/1000)*2) * (1 + 5.25) = 296.98M 伤害
+
+Case 2:
+假定你的暗属性抗性为 25000，同时，行走在亮度为 8 的区域，
+你受到一次来自 暗能咒术师 (Elite) 的暗咒攻击，将受到 867895 * (1 + (26875-25000)/1000 * 2) * (1 + 0) = 4.12M 伤害
+
+Case 3:
+假定你的暗属性抗性为 26875+，同时，行走在亮度为 8 的区域，
+你受到一次来自 暗能咒术师 (Elite) 的暗咒攻击，将受到 867895 * (1 + 0) * (1 + 0) = 867.9K 伤害
 ```
 
 ?> 关于伤害计算，更多内容请参考 [属性与相关计算公式](pages/attr)
+
+#### 暗能锁链
+
+暗能锁链会在移动过程中吸收路径中的能量：<br>
+当你们的距离超过 **8** 格，每提升 **2** 格，都将对暗能锁链提供 **100%** 的增益，即  $Damage = Damage * (1 + {\large Max[Floor({\Large \frac{Distance - 8}{2}}) , 0]})$ <br>
+因此请尽可能近距离击杀暗能咒术师。<br>
+
+> 距离：欧几里得距离
+
+参考：
+
+```TEXT
+Case 1:
+假定你的暗属性抗性为 25000，击杀时距离暗能咒术师范围 25 格
+你受到一次来自 暗能咒术师 (Elite) 的暗能锁链攻击，将受到 867895 * (1 + (26875-25000)/1000 * 3) * (1 + Floor(25-8/2)) = 51.7M 伤害
+
+Case 2:
+假定你的暗属性抗性为 26875+，击杀时距离暗能咒术师范围 20 格
+你受到一次来自 暗能咒术师 (Elite) 的暗咒攻击，将受到 867895 * (1 + 0) * (1 + 6) = 6.1M 伤害
+
+Case 3:
+假定你的暗属性抗性为 26875+，击杀时距离暗能咒术师范围 6 格
+你受到一次来自 暗能咒术师 (Elite) 的暗咒攻击，将受到 867895 * (1 + 0) * (1 + 0) = 867.9K 伤害
+```
