--- a/docs/pages/g1.md
+++ b/docs/pages/g1.md
@@ -3,6 +3,7 @@
     color: #f84040; 
     font-weight: 600;
   }
+
   .quote {
     background: #fbfdff;
     color: #606974;
@@ -11,6 +12,7 @@
     padding: 10px;
     margin: 0px;
   }
+
   .quote-hl {
     display: inline-block;
     background-color:rgb(248, 248, 248);
@@ -20,13 +22,13 @@
     padding: 0px 3px;
   }
 
-  .markdown-section free:not([width]):not([style]) {
-    width: 400px;
+  .markdown-section img:not([width]):not([style]) {
+    max-width: 400px;
     height: auto;
   }
   
   @media (max-width: 768px) {
-    .markdown-section free:not([width]):not([style]) {
+    .markdown-section img:not([width]):not([style]) {
       width: 100%;
       max-width: 400px;
     }
@@ -1225,7 +1227,7 @@ Premium、Luxury 可以使得你分别获得 25% / 50% 的额外点数。Lu
 
 ### 全部奖励表：
 
-![全部奖励表](https://free.picui.cn/free/2025/06/30/6861e9f73fb1a.jpg)
+<img src="https://free.picui.cn/free/2025/06/30/6861e9f73fb1a.jpg" width="1000px"><br>
 
 ### CA Store
 
@@ -1487,7 +1489,7 @@ Easy级别 的跑酷奖励箱子<br>
 ### 移动检测
 
 在你挂机获取材料时(通常判定是获取紫色材料和LTD)还会触发移动检测，并分为有声和无声，两种移动检测共用保护时间，出现时会将视角强制移动为面向天空并在左下角聊天栏进行消息提示。<br>
-<img src="https://free.picui.cn/free/2025/06/30/6862036c02d94.jpg" alt="挂机判定" width="80%" max-width="600px"><br>
+<img src="https://free.picui.cn/free/2025/06/30/6862036c02d94.jpg" alt="挂机判定" width="60%" max-width="600px"><br>
 你将有30s的时间去通过挂机检测，如果你没有通过移动挂机检测，将会受到逐渐增加的惩罚。<br>
 
 ~~例：扣除LTD(会扣除背包内LT，如果依然不够将会以欠款形式在再次获取LTD时扣除)~~<br>
