--- a/docs/pages/g2.md
+++ b/docs/pages/g2.md
@@ -44,7 +44,7 @@
 
 - 如何开始，如何刷怪，特殊的物品/地点以及你所需要知道的挂点。<br>
 - 如何开始：针对已经达到40级的玩家并且还不知道如何进入天泽岛。<br>
-- 如何刷怪：天泽岛内的怪物无论是数量还是种类都十分丰富，且地图相对复杂，旨在为玩家找到正确的方向<br>
+- 如何刷怪：天泽岛内的怪物无论是数量还是种类都十分丰富，且地图相对复杂，旨在为玩家找到正确的方向。<br>
 - 特殊的物品/地点：天泽岛内特殊的产出，且大多具有唯一的获取途径或特殊用途。<br>
 - 你所需要知道的挂点：挂机是RPG十分常见事情，这些挂点能帮助你获取十分可观的收益。<br>
 
