docs(DesignCode): 添加设计规范页面

--- a/docs/pages/g2.md
+++ b/docs/pages/g2.md
@@ -24,6 +24,10 @@
     max-width: 400px;
     height: auto;
   }
+
+  .markdown-section h2 {
+    font-family: Times New Roman, 等线;
+  }
   
   @media (max-width: 768px) {
     .markdown-section img:not([width]):not([style]) {
@@ -52,12 +56,12 @@
 ## **目录**
 
 ### **T1区域：**
-【[DreamPainterIV（DPIV）服务器生存指北g1篇](https://docs.qq.com/doc/DVldMUlduYnhIUXNn?u=53ae6c3b308648fface27938d3eb338f)】
+【[DreamPainterIV（DPIV）服务器生存指北g1篇](pages/g1)】
 
 【[光晦陆-攻略篇](https://docs.qq.com/doc/DV3B3QVR0cEVvc2xH)】
 
 ### **T2区域：**
-【[DreamPainter - IV天泽岛部分区域讲解g2篇](https://docs.qq.com/doc/DVnBWcHBKZ0Vob3NF)】**←←←正在阅读**
+【[DreamPainter - IV天泽岛部分区域讲解g2篇](https://docs.qq.com/doc/DVnBWcHBKZ0Vob3NF)】**←  本篇正在阅读**
 
 【[DPIV服务器 进阶篇](https://docs.qq.com/doc/DVlZlcHFVSmlCeHB0)】
 
@@ -78,90 +82,95 @@
 
 
 # **开始之前**
-**↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓**
 
-**如果你对如何提升自己的实力或T2游戏内容有所困惑，**
+?> 如果你对如何提升自己的实力或T2游戏内容有所困惑，[DPIV服务器进阶篇](https://docs.qq.com/doc/DVlZlcHFVSmlCeHB0) 或许可以帮助你。
 
-[DPIV服务器进阶篇](https://docs.qq.com/doc/DVlZlcHFVSmlCeHB0)**或许可以帮助你。**
 
-↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
 
-# **一．如何开始**
-## **1.开启传送门**
-位于「光晦陆」的末端，为「天泽岛」的起始点，入口处坐标**[XYZ：71/73/-295]**。从4c格里佛斯城的出发路线如下
+# 1．如何开始
+## 1.1. 开启传送门
+位于「光晦陆」的末端，为「天泽岛」的起始点，入口处坐标 `XYZ：71/73/-295`。从4c格里佛斯城的出发路线如下
 
 ![pV194nU.png](https://s21.ax1x.com/2025/07/14/pV194nU.png)
 
-您需要花费,[**1成就勋章(AM)**,**3000u(unit) pe**，**20000dpe**，**至少64ap的获得记录**。]
-==或者==**参与击杀Valiant（40b boss）**
+你需要满足：
+- 1x 成就勋章(AM)
+- 3000 unit Pe
+- 20000 dPe
+- 至少 `64` AP 的获取记录
 
-ps：**更推荐**参与击杀Valiant（40b boss）来解锁传送需求,这将使你节省大部分材料。
+或满足
+- 已参与击杀 Valiant (Lv.40 Boss)
+
+PS：**更推荐** 通过击杀 Valiant 来解锁传送需求,这将使你节省大部分材料。<br>
 ![pV19TAJ.png](https://s21.ax1x.com/2025/07/14/pV19TAJ.png)
 
 进入「天泽岛」的消耗费用随您的 [**杀敌数/在线时长**]而改变 (K：击杀数、T：在线时长)
 
-| 传送花费 | K（T） |
-|--|--|
-| 7500 | ≥4000 ***及*** ≥0 |
-| 3600 | ≥12000 或 ≥16 |
-| 1800 | ≥24000 或 ≥24 |
-| 800 | ≥36000 或 ≥40 |
-| 400 | ≥48000 ***及*** ≥80 |
+| 传送花费 | K | T | 条件 |
+|--|--|--|--|
+| 7500 | ≥4000 | ≥0 |同时满足
+| 3600 | ≥12000 | ≥16 |满足其一
+| 1800 | ≥24000 | ≥24 |满足其一
+| 800 | ≥36000 | ≥40 |满足其一
+| 400 | ≥48000 | ≥80 |同时满足
 
 
 
 当你的在线时长/击杀数量 达不到可进入标准或所需dpe过多，你可以选择于t1的4c寻找**rEd\_dIce**用12AM换取武器**「格里佛斯的守护」**与**「格里佛斯的信念」**其中之一的图纸以制作武器（建议先做信念）。
 
->此两把武器同时是长流程「运命･灵魂摆渡者」的前置需求。
+> 此两把武器同时是长流程「运命･灵魂摆渡者」的前置需求。
 
-## **2.进入t2**
-在条件达到设置5c重生点（4000击杀，40级）的时候，便可以正式开启你的t2旅程。
+## 1.2. 进入t2
+在条件达到设置5c重生点（4000击杀，40级）的时候，便可以正式开启你的t2旅程。<br>
 ![pV19I74.png](https://s21.ax1x.com/2025/07/14/pV19I74.png)
 > 在活动开启时，击杀t2的怪物将概率获得csp/es
 >
-> es点数可以在活动商店兑换一些限定物品，大部分需要与LT一起购买<br>
-> csp使用铃音补给箱进行立命/改命以增加属性增幅/获得额外属性，在最终获得强力毕业装备[**1 unit=512csp**]
+> Es 可以在活动商店兑换一些限定物品，大部分需要与 LT 一起购买<br>
+> CsP 使用铃音补给箱进行立命/改命以增加属性增幅/获得额外属性，在最终获得强力毕业装备 *(1 unit CsP = 512 CsP)*
 
-### 「林荫镇」（5c）大体介绍
+## 1.3 「林荫镇」（5c）大体介绍
 
-此为t2回t1的快速路线，另一条路线位于7c港口 **[XYZ：556/78/-146]处。**
-![pV197N9.png](https://s21.ax1x.com/2025/07/14/pV197N9.png)
-为5c打造台、鉴定台、多功能台的位置
-![pV195BF.png](https://s21.ax1x.com/2025/07/14/pV195BF.png)
-源石商人与末影箱的位置
-![pV19XjK.png](https://s21.ax1x.com/2025/07/14/pV19XjK.png)
-此楼1层的NPC[锻造带师]，会以8am出售灵恸的图纸（此图纸的材料获取后文提及，不建议t2的前中期做）
-![](https://s3.bmp.ovh/imgs/2025/07/15/1039a0da584eff67.png)
-此处需要开启林荫矿坑II才能使用其与5c的快捷传送点
-![](https://s3.bmp.ovh/imgs/2025/07/15/85949f30902d43d5.png)
+此为t2回t1的快速路线，另一条路线位于7c港口 **[XYZ：556/78/-146]处。**<br>
+![pV197N9.png](https://s21.ax1x.com/2025/07/14/pV197N9.png)<br>
+为5c打造台、鉴定台、多功能台的位置<br>
+![pV195BF.png](https://s21.ax1x.com/2025/07/14/pV195BF.png)<br>
+源石商人与末影箱的位置<br>
+![pV19XjK.png](https://s21.ax1x.com/2025/07/14/pV19XjK.png)<br>
+此楼1层的NPC[锻造带师]，会以8am出售灵恸的图纸（此图纸的材料获取后文提及，不建议t2的前中期做）<br>
+![](https://s3.bmp.ovh/imgs/2025/07/15/1039a0da584eff67.png)<br>
+此处需要开启林荫矿坑II才能使用其与5c的快捷传送点<br>
+![](https://s3.bmp.ovh/imgs/2025/07/15/85949f30902d43d5.png)<br>
 位于木桩旁边的屏障门，就是前往林荫后山I的地方
 
-# **二．刷怪流程与相关位置**
+# 2．刷怪流程与相关位置
 
 ![](https://s3.bmp.ovh/imgs/2025/07/15/015a443020c9af4b.png)
 
-## **（1）林荫后山I **
-**Lv.45▽林间豹猫（风间利爪）**[括号内为精英形态]
+## 2.1 林荫后山 I 
 
-·掉落素材/点数：**[林间猫尾]**、[未知装备]**、**[未知武器]、林地区域探索点数（在后文中，由于未知武器/装备基本都会掉落，所以后文只写出有用处的材料。同时，将对AP任务所需求的素材进行 **[]并黑色加粗**）
+`Lv.45` `林间豹猫` `风间利爪`
+
+掉落素材/点数：
+- `林间猫尾`
+- 未知装备 / 未知武器
+- 林地区域探索点数 (Rep)
+
+<span style="border-left: 4px solid #aaa; color: #999; padding-left: 10px;">由于未知武器/装备基本都会掉落，所以后文只写出有用处的材料。同时，含 `特殊标记` 的素材为悬赏任务所需之材料。</span>
 
 ![](https://s3.bmp.ovh/imgs/2025/07/15/cf9322e554cc8ce1.png)
-·快速刷新点：**[XYZ：-186/94/-337]**
->怪物详情属性请移步群文件-实用文档- **《全怪物属性统计表》** 或者对想查看属性的怪物输入指令 **/za info**,除特殊情况外后续将不会对怪物属性有具体说明。
 
-**- 关于[快速刷新点]**
+> 快速刷新点：`XYZ：-186/94/-337`<br>
+> 怪物详情属性请移步 `群文件`→`实用文档`→ **《全怪物属性统计表》** <br>或者对想查看属性的怪物输入指令 **/za info**,除特殊情况外后续将不会对怪物属性有具体说明。
 
-·即在限定时间内比同一怪物其他刷怪点效率更高的刷怪，用白色的旋转粒子效果表示刷新的位置
+<p style="border-left: 4px solid #aaa; color: #999; padding-left: 10px;"><strong>快速刷新点</strong>:<br>即在限定时间内比同一怪物其他刷怪点效率更高的刷怪，用白色的旋转粒子效果表示刷新的位置</p>
 
-**- MultiMobsSpawner** 
-
-·简称MMS，在限定时间内在快速刷新点的基础上加多怪物刷新数量，同时白色特效会变为紫色的粒子效果。在活动期间时，会有常驻MMS随机开启。而非活动期间，MMS概率出现
-
->某次更新为了降低服务器耗能取消了mms点特效，请自行按参照物/坐标寻找挂点。
+<p style="border-left: 4px solid #aaa; color: #999; padding-left: 10px;"><strong>MultiMobsSpawner</strong>:<br>简称MMS，在限定时间内在快速刷新点的基础上加多怪物刷新数量。<br>在活动期间时，会有常驻MMS随机开启；而非活动期间，MMS概率出现。</p>
 
 
 
-## **（2） 开启林荫后山II**
+## 2.2 林荫后山 II
+
 ![](https://s3.bmp.ovh/imgs/2025/07/15/60625ee6776bd41b.png)
 
 在你积攒到**480/ Rep**林地区域探索点数与**6000dpe**后可到[**XYZ：-124/104/-372**]右键海晶灯开启[**林荫后山II**]。
