docs: 重构首页卡片布局

--- a/docs/pages/指令大全.md
+++ b/docs/pages/指令大全.md
@@ -1,12 +1,35 @@
+<style>
+.dptag {
+  color: #f0f0f0;
+  background-color: #538aec;
+  text-shadow: 0.5px 1px 0.5px rgba(0, 0, 0, 0.25);
+  padding: 2px 3px;
+  margin: 0 2px;
+  border-radius: 2px;
+  font-family: 等线;
+  font-weight: 500;
+}
+
+.tag-purple {
+  background: #7a31aa;
+}
+
+</style>
+
 # DreamPainter - IV 服务器指令大全
 
 最近一次更新：2026/1/27
 
-**注意：
-1.绝大多数指令均可以使用 Tab 进行快速补充，包括且不限于玩家ID。
-2.鉴于玩家对 DreamPainter - IV 服务器已有一定程度上的了解，因此不会对常见名词及简写或俗称进行详细解释。**
+<p style="border-left: 5px solid #3c547cff; color: #5777afff; padding-left: 10px;">
+绝大多数指令均可以使用 Tab 进行快速补充，包括且不限于玩家ID。<br>
+鉴于玩家对服务器已有一定程度上的了解，因此不会对常见名词及简写或俗称进行详细解释。<br>
+由于服务器指令包含范围过于广泛，因此无法将所有指令均于本文档完全介绍，若有疏漏，请及时联系玩家 <span class="dptag">Miyazono_nana</span> 进行完善补充。
+</p>
 
->由于服务器指令包含范围过于广泛，因此无法将所有服务器指令均于本文档完全介绍，若有疏漏，请及时联系玩家 **Miyazono_nana** 进行完善补充。
+<p style="border-left: 5px solid #745691ff; color: #826199ff; padding-left: 10px;">
+文档最后更新于 2026/01/27<br>
+贡献者: <span class="dptag tag-purple">Miyazono_Nana</span> <span class="dptag tag-purple">Q9fouse_</span>
+</p>
 
 ---
 ## portal 指令
@@ -17,8 +40,8 @@
 
  或你可以使用指令：`/portal 代号` 进行传送
 
->部分代号展示：
->1c（傲林镇）, 10b（鬼骑士）, h60（晨曦矿洞）, d72（灵魂峡谷）, quest3（空间站）, rainmaker（唤雨台）
+> 部分代号展示：
+> 1c（傲林镇）, 10b（鬼骑士）, h60（晨曦矿洞）, d72（灵魂峡谷）, quest3（空间站）, rainmaker（唤雨台）
 
 除此之外，代号还支持怪物名字，部分素材掉落以及珍惜产物，如:
 皓牛，蘑菇肉，深井水等。
