``` docs(updatelogs): 更新称号大全页面内容并添加新版本更新日志
- 在更新日志中添加「代理指挥卡」支持一键代理所有战斗类副本的功能说明
```

--- a/docs/pages/称号大全.md
+++ b/docs/pages/称号大全.md
@@ -168,11 +168,11 @@
 | 学徒 | Lv.10 – Lv.49 |
 | 学者 | Lv.50 – Lv.149 |
 | 精通 |  Lv.150 – Lv.399 |
-|极境|Lv.400 – Lv.750|
-|序神| Lv.1000 – Lv.2000+|
+| 极境 |Lv.400 – Lv.750 |
+| 序神 | Lv.1000 – Lv.2000+ |
 
->你可以使用指令`/prefix ls` 佩戴序神称号
-> 如想佩戴单项技能称号,请通过/prefix ls<技能>
+> 你可以使用指令`/prefix ls` 佩戴序神称号<br>
+> 如想佩戴单项技能称号,请通过 `/prefix ls <技能>`
 
 
 
@@ -201,7 +201,8 @@
 
 #### lava岛成就（灼热舞者）
 - 指令：`/prefix firedancer`
->该成就你需要达到一定**灼热层数**并且存活至其自然消除后自动获取
+
+> 该成就你需要达到一定**灼热层数**并且存活至其自然消除后自动获取
 
 | 等级 | 灼热层数 |
 |--|--|
@@ -245,7 +246,7 @@
 | Ver.II |360|
 | Ver.III |600|
 |Mos.Top|1000|
-|MoT.Pls|24000|
+|MoT.Pls|2400|
 |Ult.Var|5760|
 |Ruler|10800|
 |Anthem|17280|
@@ -258,7 +259,8 @@
 #### 春节：
 - 每年不同
 - 指令：`/prefix 202*cny`
->例：2023 春节称号指令为 `/prefix 2023cny`
+
+> 例：2023 春节称号指令为 `/prefix 2023cny`
 
 目前已知道的称号：
 
@@ -303,6 +305,7 @@
 
 #### 端午节：
 - 指令：`/prefix dw_<code>`
+
 代号或 sc 指令每年或许会有变动，请以每年端午群内文件为准
 
 #### 万圣节：
@@ -337,7 +340,7 @@
 
 
 - 后缀称号santa：`/prefix santa`
->圣诞节赞助 200 元获取，最多可叠加 6 次。
+> 圣诞节赞助 200 元获取，最多可叠加 6 次。
 
 ---
 
